syntax = "proto3";

package calculator;


message SumRequest {
    int32 first_int = 1;
    int32 second_int = 2;
}

message SumResponse {
    int32 the_sum = 1;
}
